# youbot_teleop

./: .gitignore  .travis.yml  CMakeLists.txt  README  manifest.xml  package.xml  stack.xml
launch/: youbot_joy_teleop.launch  youbot_moveit_teleop.launch
rail_youbot_description/: manifest.xml
rail_youbot_description/Media/materials/scripts/: rail_youbot.material
rail_youbot_description/robots/: rail_youbot.urdf.xacro
rail_youbot_description/urdf/: youbot.gazebo.xacro
rail_youbot_description/urdf/youbot_base/: base.gazebo.xacro  base.urdf.xacro  base_marker.urdf.xacro
rail_youbot_description/urdf/youbot_gripper/: gripper.gazebo.xacro  gripper.urdf.xacro  gripper_camera.urdf.xacro
rail_youbot_description/urdf/youbot_plate/: plate.gazebo.xacro
rail_youbot_launch/: manifest.xml
rail_youbot_launch/launch/: rail_youbot.launch
rail_youbot_teleop/: CMakeLists.txt  mainpage.dox  manifest.xml
rail_youbot_teleop/include/youbot_teleop/: youbot_joy_teleop.h
rail_youbot_teleop/launch/: youbot_joy_teleop.launch
rail_youbot_teleop/src/: youbot_joy_teleop.cpp
src/: youbot_keyboard_teleop.py  youbot_moveit_command.cpp  youbot_moveit_teleop.cpp  youbot_teleop_arm.cpp  youbot_teleop_arm.cpp~
